Fix appear name session on mobile screen

--- a/styles/chat.css
+++ b/styles/chat.css
@@ -3493,7 +3493,7 @@ input:focus{
 @media only screen and (max-width: 600px){
 
 /* Disappear description user session */
-  #mky-session-name{
+  .mky-no-expand #mky-session-name{
 	  display: none;
   }
 }
